# java-atk-wrapper

jni/src/: AtkWrapper.c  jawaction.c  jawcomponent.c  jaweditabletext.c  jawhypertext.c  jawimage.c  jawimpl.c  jawselection.c  jawtable.c  jawtablecell.c  jawtext.c  jawutil.c  jawutil.h  jawvalue.c
wrapper/org/GNOME/Accessibility/: AtkAction.java  AtkActionImpl.java  AtkComponent.java  AtkComponentImpl.java  AtkConstants.java.in  AtkDebug.java  AtkEditableTextImpl.java  AtkFactory.java  AtkHyperlink.java  AtkHyperlinkImpl.java  AtkHypertext.java  AtkHypertextImpl.java  AtkImage.java  AtkImageImpl.java  AtkSelection.java  AtkSelectionImpl.java  AtkTable.java  AtkTableCell.java  AtkTableCellImpl.java  AtkTableImpl.java  AtkText.java  AtkTextImpl.java  AtkValue.java  AtkValueImpl.java  AtkWrapper.java  Makefile.am
